[tool.poetry]
name = "disease discovery"
version = "0.1.0"
description = ""
authors = ["Jadabuawwad <jadabuawwad@outlook.com>"]

[tool.poetry.dependencies]
python = "3.9.7"
numpy = "^1.21.4"
pandas = "^1.3.5"
sklearn = "^0.0"
matplotlib = "^3.5.1"
jupyterlab = "^3.2.5"
seaborn = "^0.11.2"
ipykernel = "^6.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
